--- a/build.gradle
+++ b/build.gradle
@@ -26,5 +26,11 @@ dependencies {
     // https://mvnrepository.com/artifact/com.googlecode.lanterna/lanterna
     compile group: 'com.googlecode.lanterna', name: 'lanterna', version: '3.0.1'
 
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+
+    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.1'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
