--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ shadowJar {
 }
 
 dependencies {
+    // https://mvnrepository.com/artifact/org.quickfixj/quickfixj-messages-all
+    compile group: 'org.quickfixj', name: 'quickfixj-messages-all', version: '2.1.0'
+
     // https://mvnrepository.com/artifact/com.googlecode.lanterna/lanterna
     compile group: 'com.googlecode.lanterna', name: 'lanterna', version: '3.0.1'
 
