--- a/build.gradle
+++ b/build.gradle
@@ -38,5 +38,11 @@ dependencies {
     // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.1'
 
+    // https://mvnrepository.com/artifact/com.google.guava/guava
+    compile group: 'com.google.guava', name: 'guava', version: '26.0-jre'
+
+    // https://mvnrepository.com/artifact/org.xmlmatchers/xml-matchers
+    //testCompile group: 'org.xmlmatchers', name: 'xml-matchers', version: '1.0-RC1'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
