--- a/build.gradle
+++ b/build.gradle
@@ -44,5 +44,8 @@ dependencies {
     // https://mvnrepository.com/artifact/org.xmlmatchers/xml-matchers
     //testCompile group: 'org.xmlmatchers', name: 'xml-matchers', version: '1.0-RC1'
 
+    // https://mvnrepository.com/artifact/org.mockito/mockito-all
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
