--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,8 @@ task local(type: JavaExec) {
 }
 
 shadowJar {
-    baseName = 'shadow'
+    enabled = true
+    manifest.attributes('Main-Class': 'com.zam.logviewer.Main')
 }
 
 dependencies {
